--- a/coloc/includes/head.html
+++ b/coloc/includes/head.html
@@ -3,38 +3,5 @@
 
 <title>Site coloc</title>
 
-<style>
-  div.container {
-    width: 100%;
-    border: 1px solid gray;
-  }
-
-  header, footer {
-    padding: 1em;
-    clear: left;
-    text-align: center;
-  }
-
-  nav {
-    float: left;
-    max-width: 250px;
-    margin: 0;
-    padding: 1em;
-  }
-
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-  }
-
-  nav ul a {
-    text-decoration: none;
-  }
-
-  article {
-    border-left: 1px solid gray;
-    padding: 1em;
-    overflow: hidden;
-  }
-</style>
+<link rel="stylesheet" href="style/main.css">
 
