--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -1,25 +1,46 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<html>
+
+<head>
+  <title> {% block title %}{% endblock %} - Site Coloc' </title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+
+<header>
+  <h1>Coloc</h1>
+</header>
+
 <nav>
-  <h1>Flaskr</h1>
+  
+  <h2> Liens </h2>
   <ul>
     {% if g.user %}
-    <li><span>{{ g.user['username'] }}</span>
-    <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
+    <li><a href="{{ url_for('blog.index')    }}"> Accueil </a></li>
+    <li><a href="{{ url_for('auth.register') }}"> Enregistrer un utilisateur </a></li>
+    <li><a href="{{ url_for('auth.logout')   }}"> Se déconnecter </a></li>
+    <li><span> Connecté : {{ g.user['username'] }}</span></li>
       {% else %}
-    <li><a href="{{ url_for('auth.register') }}">Register</a>
-    <li><a href="{{ url_for('auth.login') }}">Log In</a>
+    <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
       {% endif %}
   </ul>
 </nav>
-<section class="content">
+
+<section id="content">
   <header>
     {% block header %}{% endblock %}
   </header>
+  
   {% for message in get_flashed_messages() %}
   <div class="flash">{{ message }}</div>
   {% endfor %}
+  
   {% block content %}{% endblock %}
-  </section>
 
+</section>
+
+<footer>
+</footer>
+
+</body>
+</html>
