--- a/backend/backend/templates/blog/index.html
+++ b/backend/backend/templates/blog/index.html
@@ -1,29 +1,12 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<h1>{% block title %}Posts{% endblock %}</h1>
-{% if g.user %}
-<a class="action" href="">New</a>
-{% endif %}
+<h1>{% block title %} Bienvenue ! {% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-{% for post in posts %}
-<article class="post">
-  <header>
-    <div>
-      <h1>{{ post['title'] }}</h1>
-      <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
-    </div>
-    {% if g.user['id'] == post['author_id'] %}
-    <a class="action" href="">Edit</a>
-    {% endif %}
-  </header>
-  <p class="body">{{ post['body'] }}</p>
-</article>
-{% if not loop.last %}
-<hr>
-{% endif %}
-{% endfor %}
+<h1> Bienvenue sur le site de la coloc' ! </h1>
+<img src="static/gwenn.png">
 {% endblock %}
+
 
