Added shopping list.

--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -17,6 +17,7 @@
   <ul>
     {% if g.user %}
     <li><a href="{{ url_for('blog.index')    }}"> Accueil </a></li>
+    <li><a href="{{ url_for('blog.courses')  }}"> Liste de courses </a></li>
     <li><a href="{{ url_for('auth.register') }}"> Enregistrer un utilisateur </a></li>
     <li><a href="{{ url_for('auth.logout')   }}"> Se déconnecter </a></li>
     <li><span> Connecté : {{ g.user['username'] }}</span></li>
