--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -15,11 +15,11 @@
   <h2> Liens </h2>
   <ul>
     {% if g.user %}
-    <li><a href="{{ url_for('index'        ) }}"> Accueil                    </a></li>
-    <li><a href="{{ url_for('plantes'      ) }}"> Petites plantes            </a></li>
-    <li><a href="{{ url_for('courses'      ) }}"> Liste de courses           </a></li>
-    <li><a href="{{ url_for('auth.register') }}"> Enregistrer un utilisateur </a></li>
-    <li><a href="{{ url_for('auth.logout'  ) }}"> Se déconnecter             </a></li>
+    <li><a href="{{ url_for('main'           ) }}"> Accueil                    </a></li>
+    <li><a href="{{ url_for('plantes.plantes') }}"> Petites plantes            </a></li>
+    <li><a href="{{ url_for('courses.courses') }}"> Liste de courses           </a></li>
+    <li><a href="{{ url_for('auth.register'  ) }}"> Enregistrer un utilisateur </a></li>
+    <li><a href="{{ url_for('auth.logout'    ) }}"> Se déconnecter             </a></li>
     <li><span> Connecté : {{ g.user['username'] }}</span></li>
       {% else %}
     <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
