--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -15,7 +15,7 @@
   <h2> Liens </h2>
   <ul>
     {% if g.user %}
-    <li><a href="{{ url_for('main'           ) }}"> Accueil                    </a></li>
+    <li><a href="{{ url_for('main.index'     ) }}"> Accueil                    </a></li>
     <li><a href="{{ url_for('plantes.plantes') }}"> Petites plantes            </a></li>
     <li><a href="{{ url_for('courses.courses') }}"> Liste de courses           </a></li>
     <li><a href="{{ url_for('auth.register'  ) }}"> Enregistrer un utilisateur </a></li>
