--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -11,11 +11,14 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
 </head>
+
 <body id="page_top">
+
+<div id="main_contents" class="container">
 
 <nav id="main_navbar" class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#page_top">Coloc' - 84 Pasteur</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -49,8 +52,6 @@
   </div>
 </nav>
 
-
-<div id="main_contents" class="container">
 
   <div class="row" id="header">
     {% block header %}{% endblock %}
