--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -21,7 +21,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav">
         {% if g.user %}
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('main.index'     ) }}"> Accueil </a>
