--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -14,14 +14,16 @@
 
 <body id="page_top">
 
-<nav id="main_navbar" class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" href="#page_top">84 Pasteur</a>
-    <button class="navbar-toggler" type="button" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav nav-tabs">
+  <div id="main_contents" class="container">
+
+    <!-- Static navbar -->
+    <nav id="main_navbar" class="navbar navbar-default">
+      <a class="navbar-brand" href="#">84 Pasteur</a>
+      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar">
+      <ul class="nav navbar-nav nav-tabs">
         {% if g.user %}
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('main.index'     ) }}"> Accueil </a>
@@ -40,20 +42,19 @@
         <li class="nav-item">
           <a href="{{ url_for('auth.logout'    ) }}"> Se déconnecter             </a>
         </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <li class="nav-item">
-        <span> Connecté : {{ g.user['username'] }}</span></li>
+          <span> Connecté : {{ g.user['username'] }}</span>
+        </li>
         {% else %}
         <li class="nav-item">
           <a href="{{ url_for('auth.login') }}">Log In</a>
         </li>
         {% endif %}
-      </ul>
-    </div>
-  </div>
-</nav>
-
-
-<div id="main_contents" class="container">
+        </ul>
+      </div>
+  </nav>
 
   <div class="row" id="header">
     {% block header %}
