--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -19,7 +19,7 @@
     <!-- Static navbar -->
     <nav id="main_navbar" class="navbar navbar-default">
       <a class="navbar-brand" href="#">84 Pasteur</a>
-      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
