--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -3,10 +3,17 @@
  
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  
+  <meta name="description" content="">
+  <meta name="author" content="">
   <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon"/>
+  
   <title> {% block title %}{% endblock %} - Site Coloc' </title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  
+<!--  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
   
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
