--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -21,52 +21,52 @@
 
 <body id="page_top">
 
+  <!-- Static navbar -->
+  <nav id="main_navbar" class="navbar navbar-fixed-top">
+	<div class="container">
+	  <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">84 Pasteur</a>
+	  </div>
+      <div id="navbar" class="navbar-collapse collapse">
+		<ul class="nav navbar-nav">
+		  {% if g.user %}
+		  <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('main.index'     ) }}"> Accueil </a>
+		  </li>
+		  <li class="nav-item">
+			<a href="{{ url_for('plantes.plantes') }}"> Petites plantes            </a>
+		  </li>
+		  <li class="nav-item">
+			<a href="{{ url_for('courses.courses') }}"> Liste de courses           </a>
+		  </li>
+		  {% if g.user['superuser'] %}
+		  <li class="nav-item">
+			<a href="{{ url_for('auth.register'  ) }}"> Enregistrer un utilisateur </a>
+		  </li>
+		  {% endif %}
+		  <li class="nav-item">
+			<a href="{{ url_for('auth.logout'    ) }}"> Se déconnecter             </a>
+		  </li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
+		  <li class="nav-item">
+			<span> Connecté : {{ g.user['username'] }}</span>
+		  </li>
+		  {% else %}
+		  <li class="nav-item">
+			<a href="{{ url_for('auth.login') }}">Log In</a>
+		  </li>
+		  {% endif %}
+        </ul>
+	  </div>
+	</div>
+  </nav>
+	
   <div id="main_contents" class="container">
 
-    <!-- Static navbar -->
-    <nav id="main_navbar" class="navbar navbar-default">
-	  <div class="container-fluid">
-		<div class="navbar-header">
-          <a class="navbar-brand" href="#">84 Pasteur</a>
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-		</div>
-        <div id="navbar" class="collapse navbar-collapse">
-		  <ul class="nav navbar-nav nav-tabs">
-			{% if g.user %}
-			<li class="nav-item">
-			  <a class="nav-link" href="{{ url_for('main.index'     ) }}"> Accueil </a>
-			</li>
-			<li class="nav-item">
-			  <a href="{{ url_for('plantes.plantes') }}"> Petites plantes            </a>
-			</li>
-			<li class="nav-item">
-			  <a href="{{ url_for('courses.courses') }}"> Liste de courses           </a>
-			</li>
-			{% if g.user['superuser'] %}
-			<li class="nav-item">
-			  <a href="{{ url_for('auth.register'  ) }}"> Enregistrer un utilisateur </a>
-			</li>
-			{% endif %}
-			<li class="nav-item">
-			  <a href="{{ url_for('auth.logout'    ) }}"> Se déconnecter             </a>
-			</li>
-		  </ul>
-		  <ul class="nav navbar-nav navbar-right">
-			<li class="nav-item">
-			  <span> Connecté : {{ g.user['username'] }}</span>
-			</li>
-			{% else %}
-			<li class="nav-item">
-			  <a href="{{ url_for('auth.login') }}">Log In</a>
-			</li>
-			{% endif %}
-          </ul>
-		</div>
-	  </div>
-	</nav>
-	
 	<div class="row" id="header">
       {% block header %}
       {% endblock %}
