--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
 </head>
 
-<body id="page_top">
+<body id="page_top" style="min-height: 2000px">
 
   <!-- Static navbar -->
   <nav id="main_navbar" class="navbar navbar-fixed-top">
