--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -16,7 +16,7 @@
 <!--  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
   
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
 </head>
 
 <body id="page_top" style="min-height: 2000px">
@@ -87,8 +87,8 @@
   
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="{{ url_for('static', filename='jquery.js')    }}"></script>
-  <script src="{{ url_for('static', filename='popper.js')    }}"></script>
-  <script src="{{ url_for('static', filename='bootstrap.js') }}"></script>
+  <script src="{{ url_for('static', filename='jquery.js')        }}"></script>
+  <script src="{{ url_for('static', filename='popper.js')        }}"></script>
+  <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
 </body>
 </html>
