--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -24,7 +24,7 @@
 <body id="page_top" style="min-height: 2000px">
 
   <!-- Static navbar -->
-  <nav id="main_navbar" class="navbar navbar-fixed-top">
+  <nav class="navbar navbar_default navbar-fixed-top">
 	<div class="container">
 	  <div class="navbar-header">
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
