--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -19,7 +19,7 @@
 
 <body id="page_top" data-spy="scroll" data-target="#main_navbar" data-offset="0">
 
-<nav id="main_navbar" class="navbar fixed-top navbar-expand-lg navbar-light">
+<nav id="main_navbar" class="navbar navbar-default navbar-expand-lg navbar-light">
   <div class="container">
     <a class="navbar-brand" href="#page_top">Site Coloc</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
