--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -20,25 +20,41 @@
 <body id="page_top" data-spy="scroll" data-target="#main_navbar" data-offset="0">
 
 <nav id="main_navbar" class="navbar navbar-default navbar-expand-lg navbar-light">
-  <div class="container">
+  <div class="container-fluid">
     <a class="navbar-brand" href="#page_top">Site Coloc</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto text-center">
-        <li class="nav-item">
-          <a class="nav-link" href="#sect_research">Research</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#sect_publications">Publications</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#sect_softwares">Software</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#sect_talks">Talks</a>
-        </li>
+		  {% if g.user %}
+		  <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('main.index'     ) }}"> Accueil </a>
+		  </li>
+		  <li class="nav-item">
+			<a href="{{ url_for('plantes.plantes') }}"> Petites plantes            </a>
+		  </li>
+		  <li class="nav-item">
+			<a href="{{ url_for('courses.courses') }}"> Liste de courses           </a>
+		  </li>
+		  {% if g.user['superuser'] %}
+		  <li class="nav-item">
+			<a href="{{ url_for('auth.register'  ) }}"> Enregistrer un utilisateur </a>
+		  </li>
+		  {% endif %}
+		  <li class="nav-item">
+			<a href="{{ url_for('auth.logout'    ) }}"> Se déconnecter             </a>
+		  </li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
+		  <li class="nav-item">
+			<span> Connecté : {{ g.user['username'] }}</span>
+		  </li>
+		  {% else %}
+		  <li class="nav-item">
+			<a href="{{ url_for('auth.login') }}">Log In</a>
+		  </li>
+		  {% endif %}
       </ul>
     </div>
   </div>
