--- a/backend/backend/static/style.css
+++ b/backend/backend/static/style.css
@@ -1,40 +1,4 @@
 
-html { font-family: sans-serif; background: #eee; padding: 1rem; }
-
-body { max-width: 960px; margin: 0 auto; background: white; }
-
-header, footer {
-    padding: 1em;
-    clear: left;
-    text-align: center;
+body {
+  padding-top: 70px;
 }
-
-nav {
-    float: left;
-    max-width: 250px;
-    margin: 0;
-    padding: 1em;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav ul a {
-    text-decoration: none;
-}
-
-
-section#content {
-    border-left: 1px solid gray;
-    padding: 1em;
-    overflow: hidden;
-}
-
-table tr {
-    border: 1px solid black;
-}
-
-.flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; }
-
