--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -18,14 +18,17 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
 </head>
 
-<body id="page_top" data-spy="scroll" data-target="#main_navbar" data-offset="0">
+<body id="page_top" style="min-height: 2000px" data-spy="scroll" data-target="#main_navbar" data-offset="0">
 
-<nav id="main_navbar" class="navbar navbar-default navbar-fixed-stop navbar-expand-lg navbar-dark">
+<nav id="main_navbar" class="navbar navbar-default navbar-fixed-stop navbar-expand-lg">
   <div class="container">
     <a class="navbar-brand" href="#page_top">Site Coloc</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+	</button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto text-center">
 		  {% if g.user %}
@@ -62,57 +65,6 @@
 </nav>
 
 <div id="main_contents" class="container">
-
-<!--
-<body id="page_top" style="min-height: 2000px">
--->
-<!-- Static navbar -->
-<!--
-  <nav class="navbar navbar_default navbar-fixed-top bg-light">
-	<div class="container">
-	  <div class="navbar-header">
-        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">84 Pasteur</a>
-	  </div>
-      <div id="navbar" class="navbar-collapse collapse">
-		<ul class="nav navbar-nav">
-		  {% if g.user %}
-		  <li>
-			<a class="nav-link" href="{{ url_for('main.index'     ) }}"> Accueil </a>
-		  </li>
-		  <li>
-			<a href="{{ url_for('plantes.plantes') }}"> Petites plantes            </a>
-		  </li>
-		  <li>
-			<a href="{{ url_for('courses.courses') }}"> Liste de courses           </a>
-		  </li>
-		  {% if g.user['superuser'] %}
-		  <li>
-			<a href="{{ url_for('auth.register'  ) }}"> Enregistrer un utilisateur </a>
-		  </li>
-		  {% endif %}
-		  <li>
-			<a href="{{ url_for('auth.logout'    ) }}"> Se déconnecter             </a>
-		  </li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-		  <li>
-			<span> Connecté : {{ g.user['username'] }}</span>
-		  </li>
-		  {% else %}
-		  <li>
-			<a href="{{ url_for('auth.login') }}">Log In</a>
-		  </li>
-		  {% endif %}
-        </ul>
-	  </div>
-	</div>
-  </nav>
-	
-  <div id="main_contents" class="container">
-	-->
   
 	<div class="row" id="header">
       {% block header %}
