--- a/backend/backend/templates/base.html
+++ b/backend/backend/templates/base.html
@@ -77,7 +77,7 @@
 	</div>
 	{% endfor %}
 	
-	<div class="row" id="content">
+	<div class="jumbotron" id="content">
       {% block content %}
       {% endblock %}
 	</div>
